--- a/Bikecraft/index.html
+++ b/Bikecraft/index.html
@@ -8,44 +8,52 @@
   <title>Bikecraft</title>
 </head>
 <body> 
+  <header class="header">
   <img class="logomarca" src="/img/bikcraft.svg" alt="">
-  <header class="menu">
-    <a href="">SOBRE</a>
-    <a href="">PRODUTOS</a>
-    <a href="">LOJAS</a>
-    <a href="">CONTATO</a>
-  </header>
-  <div class="conteudo">
+  <nav>
+    <ul class="menuteste">
+      <li><a href="#">SOBRE</a></li>
+      <li><a href="#">PRODUTOS</a></li>
+      <li><a href="#">LOJAS</a></li>
+      <li><a href="#">CONTATO</a></li>
+    </ul>
+  </nav>
+</header>
+
+  <main>
+    <article class="conteudo" aria-labelledby="label-introducao">
     <div class="introducao">
-      <h1>Bicicletas Feitas a Mão</h1>
-      <p>A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios da marca.</p>
-      <a class="botao" href="#">Ver Mais</a>
+      <h1 id="label-introducao">Bicicletas Feitas a Mão</h1>
+      <article>A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios da marca.</article>
+      <a class="botao" href="#">VER MAIS</a>
       <span class="traco"></span>
     </div>
     <div>
       <img class="bicicleta" src="/img/nimbus1.jpg" alt="Imagem Bicicleta">
     </div>
-
-      <h2 class="subtitulo">VANTAGENS BIKCRAFT</h2>
-
-    <div class="vantagens">
-      <div class="vantagens-item">
+  </article>
+   <article class="conteudo" aria-labelledby="label-vantangens">
+      <h2 class="subtitulo" id="label-ventagens">VANTAGENS BIKCRAFT</h2>
+    
+    <ul class="vantagens">
+      <li class="vantagens-item">
       <img src="/img/eletrica.svg" alt="">
-      <h3>Motor Elétrico</h3>
-      <p>Permite você viajar distâncias inimaginaveis com a sua ">bike</p>
-      </div>
-      <div class="vantagens-item">
+      <h3 class="motoreletrico">Motor Elétrico</h3>
+      <p>Permite você viajar distâncias inimaginaveis com a sua bike</p>
+      </li>
+      <li class="vantagens-item">
         <img src="/img/velocidade.svg" alt="">
         <h3>40km/h</h3>
         <p>A mais rápida bicicleta elétrica disponível hoje no mercado..</p>
-        </div>
-        <div class="vantagens-item">
+        </li>
+        <li class="vantagens-item">
           <img src="/img/rastreador.svg" alt="">
           <h3>Rastreador</h3>
           <p>Rastreador e sistema anti-furto para garantir o seu sossego..</p>
-          </div>
-    </div>
-  </div>
-    <p class="rodape">Bikcraft. Alguns Direitos Reservados.</p>
+          </li>
+    </ul>
+  </article>
+  </main>
+    <footer class="rodape">Bikcraft. Alguns Direitos Reservados.</footer>
 </body>
 </html>
